# ROS-model-betterfactory

./: README.md  composed_system.rossystem  representations.aird
components/: betterfactory_laser.componentinterface  composed_system.componentinterface  costmap_aggregator.componentinterface  costmap_generator.componentinterface  heatmap_saver.componentinterface  map_server.componentinterface  rplidar_ros.componentinterface
rosnodes/: costmap_aggregator.ros  costmap_generator.ros  heatmap_saver.ros  map_server.ros  rplidar_ros.ros
src-gen/composed_system/: CMakeLists.txt  Dockerfile  composed_system_workflow.yml  docker-compose.yml  package.xml
src-gen/composed_system/launch/: composed_system.launch
src-gen/costmap_aggregator/: CMakeLists.txt  package.xml
src-gen/costmap_aggregator/src/: costmap_aggregator.cpp
src-gen/costmap_generator/: CMakeLists.txt  package.xml
src-gen/costmap_generator/src/: costmap_generator.cpp
src-gen/heatmap_saver/: CMakeLists.txt  package.xml
src-gen/heatmap_saver/src/: heatmap_saver.cpp
src-gen/map_server/: CMakeLists.txt  package.xml
src-gen/map_server/src/: map_server.cpp
src-gen/rplidar_ros/: CMakeLists.txt  package.xml
src-gen/rplidar_ros/src/: rplidar_ros.cpp
