<package format="2">
  <name>composed_system</name>
  <version>0.0.1</version>
  <description>This package provides launch file for operating composed_system</description>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/</url>


  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>costmap_aggregator</exec_depend>
  <exec_depend>heatmap_saver</exec_depend>
  <exec_depend>costmap_generator</exec_depend>
  <!--test_depend>roslaunch</test_depend-->

</package>