<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>rplidar_ros</name>
 <version>0.0.0</version>
 <description>This package contains the implementation of the node rplidar_ros</description>
  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>boost</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

</package>
